# Cj

./: .gitignore  .replit  README.md  pyproject.toml  render.yaml  replit.md
.agents/memory/: MEMORY.md  cj-ai-routing.md  cj-web-stack.md
cj-ai/: README.md  config.py  main.py  requirements.txt
cj-ai/core/: chat.py  knowledge_loader.py  learning.py  memory.py  search.py  security_filter.py  shell_helper.py
cj-ai/database/: chat_history.db  database.py
cj-ai/knowledge/: knowledge.json  training_data.json
cj-ai/tests/: test_chat.py  test_memory.py
cj-ai/ui/: console.py
cj-ai/utils/: helpers.py  logger.py  text.py
cj-web/backend/: config.py  main.py  requirements.txt
cj-web/backend/api/: admin.py  auth.py  chat.py  sources.py
cj-web/backend/core/: file_processor.py  generator.py  rag.py  scheduler.py  scraper.py  security_filter.py  seeder.py  shell_ref.py  vectorstore.py
cj-web/backend/data/: cj_web.db  cj_web.db-shm  cj_web.db-wal
cj-web/backend/data/chroma/: chroma.sqlite3
cj-web/backend/database/: db.py
cj-web/backend/utils/: logger.py  text.py
cj-web/frontend/: .env.example  index.html  package-lock.json  package.json  vercel.json  vite.config.js
cj-web/frontend/public/: manifest.json
cj-web/frontend/src/: App.jsx  api.js  i18n.js  index.css  main.jsx
cj-web/frontend/src/components/: AdminLogin.jsx  AdminPage.jsx  AuthPage.jsx  ChatWindow.jsx  InputBar.jsx  MessageBubble.jsx  Sidebar.jsx  SourcePanel.jsx
cj-web/frontend/src/context/: LangContext.jsx
