[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.3",
    "beautifulsoup4>=4.15.0",
    "chromadb>=0.5.23",
    "fastapi>=0.139.0",
    "feedparser>=6.0.12",
    "pytest>=9.1.1",
    "python-multipart>=0.0.32",
    "rapidfuzz>=3.14.5",
    "requests>=2.34.2",
    "rich>=15.0.0",
    "uvicorn>=0.51.0",
]
